openapi.josn 방법 수정
